[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/fonts/JetBrainsMonoNerdFontCompleteM-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/game.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/FredokaOne/FredokaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/JetBrainsMono/JetBrainsMonoNerdFontCompleteM-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StreamTexture" id=22]
flags = 4
load_path = "res://.import/texture_default.png-b1de129b7d7ab1771f5dc90215b6cc09.stex"

[sub_resource type="DynamicFont" id=1]
size = 70
use_filter = true
extra_spacing_top = -5
extra_spacing_bottom = -5
extra_spacing_char = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=5]
size = 34
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=23]
size = 70
use_filter = true
extra_spacing_top = -5
extra_spacing_bottom = -5
extra_spacing_char = 10
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.721569, 0.835294, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.721569, 0.835294, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.721569, 0.835294, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.721569, 0.835294, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
anti_aliasing_size = 1.339

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.666667, 0.482353, 0.764706, 1 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
self_modulate = Color( 0, 0, 0, 0.0470588 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 22 )
stretch_mode = 2
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 420.0
margin_top = 10.0
margin_right = -420.0
margin_bottom = -10.0
__meta__ = {
"_editor_description_": ""
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
margin_right = 1080.0
margin_bottom = 1060.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer"]
margin_left = 10.0
margin_right = 1070.0
margin_bottom = 1060.0
custom_constants/separation = 10

[node name="BarContainer" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/VBoxContainer"]
margin_right = 1060.0
margin_bottom = 84.0
custom_constants/separation = 20

[node name="Home" type="Button" parent="MarginContainer/AspectRatioContainer/VBoxContainer/BarContainer"]
margin_right = 84.0
margin_bottom = 84.0
rect_min_size = Vector2( 84, 84 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.603922, 0.388235, 0.721569, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
text = ""

[node name="Time" type="Label" parent="MarginContainer/AspectRatioContainer/VBoxContainer/BarContainer"]
margin_left = 450.0
margin_right = 610.0
margin_bottom = 84.0
rect_min_size = Vector2( 160, 84 )
size_flags_horizontal = 6
size_flags_vertical = 1
custom_colors/font_color = Color( 0.333333, 0.211765, 0.396078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 21 )
text = "00:00"
align = 1
valign = 1

[node name="Restart" type="Button" parent="MarginContainer/AspectRatioContainer/VBoxContainer/BarContainer"]
margin_left = 976.0
margin_right = 1060.0
margin_bottom = 84.0
rect_min_size = Vector2( 84, 84 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.721569, 0.835294, 0.301961, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/focus = SubResource( 26 )
custom_styles/disabled = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
enabled_focus_mode = 0
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="GameContainer" type="PanelContainer" parent="MarginContainer/AspectRatioContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 94.0
margin_right = 1060.0
margin_bottom = 1060.0
size_flags_horizontal = 5
size_flags_vertical = 3
custom_styles/panel = SubResource( 9 )

[node name="Panel" type="Panel" parent="MarginContainer/AspectRatioContainer/VBoxContainer/GameContainer"]
margin_right = 1060.0
margin_bottom = 966.0
custom_styles/panel = SubResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/AspectRatioContainer/VBoxContainer/GameContainer"]
margin_right = 1060.0
margin_bottom = 966.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="GridContainer" type="GridContainer" parent="MarginContainer/AspectRatioContainer/VBoxContainer/GameContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1020.0
margin_bottom = 926.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="MarginContainer/AspectRatioContainer/VBoxContainer/BarContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/VBoxContainer/BarContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
